tooling/nargo_cli/tests/snapshots/execute__tests__regression_3394_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3431700808038025792",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82Y226CQBCGl4IHPKK2PoBPgKBC77yoD0K1Jr1pm6a999Fb0h0YJ+tFwz8Jk5AFdvnm39nZQ/BMbZ4tA1vemdu2t2XczNZ67Dw2/zHq/LctQxGEst43uI6Hwi+Sn8ebXejoH1B/GjKmAj8hfqDDj3uW83S55hvh1xft5De8zYG1ObA25TVm95JDdXzC0ff932tq6vvI3oeCp5E/XBM6/guHfvI1tH19F33l4+PBtGTPrlzD8ZMqlzsq/F2lv6vDfyR+T4f/Qvy+Dn9D/FCFnxbEH+jkZ7XWDnXikxF/pMPfEn+sE59qfCc6/Gr+TlX4yZH4kY7+anxnOuObE3+uwk8r/kInPifaf+9NbbQvke8H9h63DyapJ/wZc73PGeF/ILSiz6We8Ed6ZHxor6bYLR1aI0ed3MOXDj9Lhx8XKwCyOkBWF8jqAVl9IAsZ+7ClugZAFjInhkAWMr9GQBYyV9s6H8dAFjL2yPxC6poAWch1YtpSXRGQhZxDyLmNnEMzIKut++McyKLzuOv/TGl7W8YNjbQGDq2uM2m55tB57uPz9e3LCOMgjwmm5ztRR+1Xop1/gyfZ3o33K8d35eJLAx5crn3t7fu4gWX5X0BL8y2/Y+q+cAtYPW9PAeUHJCqDBjrPWbE+p8W52Ban0+ZYzAW/NP6T8Achx+EEvhgAAA==",
  "debug_symbols": "ldjNboJAFEDhd5k1C+b/Xl+laQwqGhICBrFJQ3j3QiNpU+3i7LwyZ1h8rO5kTvXhftk33bm/md3bZNr+WI1N3y3TZMrvv27Xqlun21gNo9l5KUzdncwu+rkw56atl5/lXDwdFLWPk+p+jjo3vy/DYWjatrns/75vMja/euv/lxXGCi6UFq7EhcWFw4XHRcBFxEXCBTZ32Nxhc4/NPTb32Nxjc4/NPTb32Nxjc4/NPTYP2Dxg84DNAzYP2Dxg84DNAzYP2Dxg84jNIzaP2Dxi84jNIzaP2Dxi84jNIzZP2Dxh84TNEzZP2Dxh84TNEzZP2Dxh84zNMzbP2Dxj84zNMzbP2Dxj84zNMzYXbC7YXLC5YHPB5oLNBZsLNhdsLthcsblic8Xmis0Vmys2V2yu2FyxuWJzW5Y8sTxxPPE8CTyJPEk8eWmfQ34kWcqnRHiiLJmX6aMamurQ1useaX14747bWmkZx8/r9mRbPF2H/lif7kO9rqB+bZ/Wz8haW1iblouXy78A",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "fn main() {\n    let x: i8 = -128;\n    std::println(x);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/regression_3394/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "print_unconstrained"
  ]
}
