tooling/nargo_cli/tests/snapshots/execute__tests__regression_3889_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "734622518113331794",
  "abi": {
    "parameters": [
      {
        "name": "works",
        "type": {
          "kind": "struct",
          "path": "Baz::Works",
          "fields": [
            {
              "name": "a",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      },
      {
        "name": "fails",
        "type": {
          "kind": "struct",
          "path": "Foo::NewType",
          "fields": [
            {
              "name": "a",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      },
      {
        "name": "also_fails",
        "type": {
          "kind": "struct",
          "path": "Foo::NewType",
          "fields": [
            {
              "name": "a",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "field"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62R3QqAMAhGW/VAOrXpXa/SaL3/I/S3wViX7YB8KHJAdMPLdJUbvsw515wEC3MKPiHhBt6iCrDERVFRVHavRElZg0ULYMiU8BCjA156ulxH11i54B849XM9N87Vjwr3fGz6dqdwApReEavkAQAA",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
